--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-iframe="https://slides.com/voyagersocialplatform/best-rail-journeys-in-the-world/embed?style=hidden"></section>
-				<section  class="slide1 createdSlide"></section> 
+				<section class="slide1" data-background-iframe="https://slides.com/voyagersocialplatform/best-rail-journeys-in-the-world/embed?style=hidden"></section>
+				<section  class="slide2"></section> 
 				
 			</div>
 		</div>
