more work on the fascinatin festivales

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 		<link rel="stylesheet" href="dist/theme/black.css">
         <link rel="stylesheet" href="/styles.css">
 		<!-- Theme used for syntax highlighted code -->
+
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section class="slide1" data-background-iframe="https://slides.com/voyagersocialplatform/best-rail-journeys-in-the-world/embed?style=hidden"></section>
+				<section data-aos="fade-down" class="slide1" data-background-iframe="https://slides.com/voyagersocialplatform/best-rail-journeys-in-the-world/embed?style=hidden"></section>
 				<section  class="slide2"></section> 
 				
 			</div>
@@ -26,6 +27,7 @@
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -38,6 +40,7 @@
 			});
 			
 		</script>
-		<script defer src="/iconicCities.js"></script>
+		<script defer src="/bestRailJourneys.js"></script>
+		
 	</body>
 </html>
